# My-Claude-Code

./: .gitignore  CLAUDE.md
CEAM/: checkCaseClosurePTLG.groovy
interactive_visualization/: interactive_visualization.html
requirements-answer-tool/: .env.example  README.md  pyproject.toml  run.bat
requirements-answer-tool/backend/: __init__.py  app.py  document_processor.py  excel_handler.py  models.py  rag_system.py  vector_store.py
requirements-answer-tool/frontend/: index.html  script.js  style.css
